// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Jira Approval tests Basic snapshot - deploymentform mode: jira-approval-deploymentform 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <div
      class="connectorLabel"
    >
      <div
        class="StyledProps--font StyledProps--main"
        style="margin-bottom: 5px;"
      >
        <span
          class="Tooltip--acenter bp3-label"
          data-tooltip-id="stepTestUtilForm_spec.connectorRef"
        >
          pipeline.jiraApprovalStep.connectorRef
        </span>
      </div>
      <div
        style="display: flex; align-items: center;"
      >
        <div
          class="bp3-form-group"
          style="margin-bottom: 0px;"
        >
          <div
            class="bp3-form-content"
          >
            <div
              class="Layout--horizontal StyledProps--main MultiTypeInput--main"
              style="width: 385px;"
            >
              <button
                class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main container Button--iconOnly Button--without-shadow Button--withRightIcon"
                data-testid="cr-field-spec.connectorRef"
                style="width: 385px;"
                type="button"
              >
                <span
                  class="bp3-button-text"
                >
                  <span
                    class="placeholder"
                  >
                    connectors.selectConnector
                  </span>
                </span>
                <span
                  class="bp3-icon bp3-icon-chevron-down StyledProps--main"
                  icon="chevron-down"
                >
                  <svg
                    data-icon="chevron-down"
                    height="14"
                    viewBox="0 0 16 16"
                    width="14"
                  >
                    <desc>
                      chevron-down
                    </desc>
                    <path
                      d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </button>
              <span
                class="bp3-popover-wrapper MultiTypeInput--wrapper"
              >
                <span
                  class="bp3-popover-target"
                >
                  <button
                    class="MultiTypeInput--btn MultiTypeInput--FIXED"
                  >
                    <span
                      class="bp3-icon StyledProps--main"
                      data-icon="fixed-input"
                    >
                      <svg
                        height="12"
                        viewBox="0 0 9 9"
                        width="12"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                          fill="currentColor"
                        />
                      </svg>
                    </span>
                  </button>
                </span>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="bp3-form-group deploymentViewMedium"
    >
      <label
        class="bp3-label"
        for="spec.issueKey"
      >
        <span
          class="Tooltip--acenter"
          data-tooltip-id="stepTestUtilForm_spec.issueKey"
        >
          pipeline.jiraApprovalStep.issueKey
        </span>
         
        <span
          class="bp3-text-muted"
        />
      </label>
      <div
        class="bp3-form-content"
      >
        <div
          class="Layout--horizontal StyledProps--main MultiTypeInput--main"
        >
          <div
            class="bp3-input-group MultiTypeInput--input"
          >
            <input
              autocomplete="off"
              class="bp3-input"
              name="spec.issueKey"
              type="text"
              value=""
            />
          </div>
          <span
            class="bp3-popover-wrapper MultiTypeInput--wrapper"
          >
            <span
              class="bp3-popover-target"
            >
              <button
                class="MultiTypeInput--btn MultiTypeInput--FIXED"
              >
                <span
                  class="bp3-icon StyledProps--main"
                  data-icon="fixed-input"
                >
                  <svg
                    height="12"
                    viewBox="0 0 9 9"
                    width="12"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                      fill="currentColor"
                    />
                  </svg>
                </span>
              </button>
            </span>
          </span>
        </div>
      </div>
    </div>
    <p
      class="StyledProps--font StyledProps--main"
    >
      Errors
    </p>
    <pre>
      {}
    </pre>
    <button
      class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color"
      type="button"
    >
      <span
        class="bp3-button-text"
      >
        Submit
      </span>
    </button>
  </div>
</div>
`;

exports[`Jira Approval tests Basic snapshot - input variable view: jira-approval-input variable view 1`] = `
<div>
  <div
    class="variablesListTable variablePaddingL3"
  >
    <div
      class="variableListRow variable-list-row"
    >
      <span
        class="nameSection"
      >
        name
      </span>
      <p
        class="StyledProps--font Text--lineclamp StyledProps--main valueSection StyledProps--font-variation-body StyledProps--font-weight-semi-bold StyledProps--padding-left-medium StyledProps--color StyledProps--color-black100"
        style="--text-line-clamp: 1;"
      >
        <span
          class=""
        />
      </p>
    </div>
    <div
      class="variableListRow variable-list-row"
    >
      <span
        class="nameSection"
      >
        timeout
      </span>
      <p
        class="StyledProps--font Text--lineclamp StyledProps--main valueSection StyledProps--font-variation-body StyledProps--font-weight-semi-bold StyledProps--padding-left-medium StyledProps--color StyledProps--color-black100"
        style="--text-line-clamp: 1;"
      >
        <span
          class=""
        >
          1d
        </span>
      </p>
    </div>
    <div
      class="variableListRow variable-list-row"
    >
      <span
        class="nameSection"
      >
        connectorRef
      </span>
      <p
        class="StyledProps--font Text--lineclamp StyledProps--main valueSection StyledProps--font-variation-body StyledProps--font-weight-semi-bold StyledProps--padding-left-medium StyledProps--color StyledProps--color-black100"
        style="--text-line-clamp: 1;"
      >
        <span
          class=""
        />
      </p>
    </div>
    <div
      class="variableListRow variable-list-row"
    >
      <span
        class="nameSection"
      >
        projectKey
      </span>
      <p
        class="StyledProps--font Text--lineclamp StyledProps--main valueSection StyledProps--font-variation-body StyledProps--font-weight-semi-bold StyledProps--padding-left-medium StyledProps--color StyledProps--color-black100"
        style="--text-line-clamp: 1;"
      >
        <span
          class=""
        />
      </p>
    </div>
    <div
      class="variableListRow variable-list-row"
    >
      <span
        class="nameSection"
      >
        issueKey
      </span>
      <p
        class="StyledProps--font Text--lineclamp StyledProps--main valueSection StyledProps--font-variation-body StyledProps--font-weight-semi-bold StyledProps--padding-left-medium StyledProps--color StyledProps--color-black100"
        style="--text-line-clamp: 1;"
      >
        <span
          class=""
        />
      </p>
    </div>
    <div
      class="variableListRow variable-list-row"
    >
      <span
        class="nameSection"
      >
        issueType
      </span>
      <p
        class="StyledProps--font Text--lineclamp StyledProps--main valueSection StyledProps--font-variation-body StyledProps--font-weight-semi-bold StyledProps--padding-left-medium StyledProps--color StyledProps--color-black100"
        style="--text-line-clamp: 1;"
      >
        <span
          class=""
        />
      </p>
    </div>
  </div>
</div>
`;

exports[`Jira Approval tests Basic snapshot - inputset mode but no runtime values: jira-approval-inputset-noruntime 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <p
      class="StyledProps--font StyledProps--main"
    >
      Errors
    </p>
    <pre>
      {}
    </pre>
    <button
      class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color"
      type="button"
    >
      <span
        class="bp3-button-text"
      >
        Submit
      </span>
    </button>
  </div>
</div>
`;

exports[`Jira Approval tests Basic snapshot - inputset mode: input set with errors 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <div
      class="connectorLabel"
    >
      <div
        class="StyledProps--font StyledProps--main"
        style="margin-bottom: 5px;"
      >
        <span
          class="Tooltip--acenter bp3-label"
          data-tooltip-id="stepTestUtilForm_spec.connectorRef"
        >
          pipeline.jiraApprovalStep.connectorRef
        </span>
      </div>
      <div
        style="display: flex; align-items: center;"
      >
        <div
          class="bp3-form-group bp3-intent-danger"
          style="margin-bottom: 0px;"
        >
          <div
            class="bp3-form-content"
          >
            <div
              class="Layout--horizontal StyledProps--main MultiTypeInput--main"
              style="width: 385px;"
            >
              <button
                class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main container Button--iconOnly Button--without-shadow Button--withRightIcon"
                data-testid="cr-field-spec.connectorRef"
                style="width: 385px;"
                type="button"
              >
                <span
                  class="bp3-button-text"
                >
                  <span
                    class="placeholder"
                  >
                    connectors.selectConnector
                  </span>
                </span>
                <span
                  class="bp3-icon bp3-icon-chevron-down StyledProps--main"
                  icon="chevron-down"
                >
                  <svg
                    data-icon="chevron-down"
                    height="14"
                    viewBox="0 0 16 16"
                    width="14"
                  >
                    <desc>
                      chevron-down
                    </desc>
                    <path
                      d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </button>
              <span
                class="bp3-popover-wrapper MultiTypeInput--wrapper"
              >
                <span
                  class="bp3-popover-target"
                >
                  <button
                    class="MultiTypeInput--btn MultiTypeInput--FIXED"
                  >
                    <span
                      class="bp3-icon StyledProps--main"
                      data-icon="fixed-input"
                    >
                      <svg
                        height="12"
                        viewBox="0 0 9 9"
                        width="12"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                          fill="currentColor"
                        />
                      </svg>
                    </span>
                  </button>
                </span>
              </span>
            </div>
            <div
              class="bp3-form-helper-text"
            >
              <div
                class="FormError--errorDiv"
                data-name="spec.connectorRef"
              >
                <span
                  class="bp3-icon StyledProps--main FormError--errorTextIcon StyledProps--intent-danger"
                  data-icon="circle-cross"
                >
                  <svg
                    height="12"
                    viewBox="0 0 13 13"
                    width="12"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M.167 6.501a6.333 6.333 0 1012.666 0 6.333 6.333 0 00-12.666 0zm4.071-3.003l2.26 2.263 2.264-2.263c.495-.495 1.236.248.741.743L7.24 6.504l2.254 2.258c.495.495-.247 1.238-.742.743L6.497 7.246 4.238 9.505c-.495.495-1.236-.249-.741-.744l2.258-2.258-2.259-2.262c-.494-.495.248-1.238.742-.743z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                <span
                  class="FormError--error"
                >
                  pipeline.jiraApprovalStep.validations.connectorRef
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="bp3-form-group bp3-intent-danger deploymentViewMedium"
    >
      <label
        class="bp3-label"
        for="spec.issueKey"
      >
        <span
          class="Tooltip--acenter"
          data-tooltip-id="stepTestUtilForm_spec.issueKey"
        >
          pipeline.jiraApprovalStep.issueKey
        </span>
         
        <span
          class="bp3-text-muted"
        />
      </label>
      <div
        class="bp3-form-content"
      >
        <div
          class="Layout--horizontal StyledProps--main MultiTypeInput--main"
        >
          <div
            class="bp3-input-group MultiTypeInput--input"
          >
            <input
              autocomplete="off"
              class="bp3-input"
              name="spec.issueKey"
              type="text"
              value=""
            />
          </div>
          <span
            class="bp3-popover-wrapper MultiTypeInput--wrapper"
          >
            <span
              class="bp3-popover-target"
            >
              <button
                class="MultiTypeInput--btn MultiTypeInput--FIXED"
              >
                <span
                  class="bp3-icon StyledProps--main"
                  data-icon="fixed-input"
                >
                  <svg
                    height="12"
                    viewBox="0 0 9 9"
                    width="12"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                      fill="currentColor"
                    />
                  </svg>
                </span>
              </button>
            </span>
          </span>
        </div>
        <div
          class="bp3-form-helper-text"
        >
          <div
            class="FormError--errorDiv"
            data-name="spec.issueKey"
          >
            <span
              class="bp3-icon StyledProps--main FormError--errorTextIcon StyledProps--intent-danger"
              data-icon="circle-cross"
            >
              <svg
                height="12"
                viewBox="0 0 13 13"
                width="12"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M.167 6.501a6.333 6.333 0 1012.666 0 6.333 6.333 0 00-12.666 0zm4.071-3.003l2.26 2.263 2.264-2.263c.495-.495 1.236.248.741.743L7.24 6.504l2.254 2.258c.495.495-.247 1.238-.742.743L6.497 7.246 4.238 9.505c-.495.495-1.236-.249-.741-.744l2.258-2.258-2.259-2.262c-.494-.495.248-1.238.742-.743z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
            <span
              class="FormError--error"
            >
              pipeline.jiraApprovalStep.validations.issueKey
            </span>
          </div>
        </div>
      </div>
    </div>
    <p
      class="StyledProps--font StyledProps--main"
    >
      Errors
    </p>
    <pre>
      {
  "spec": {
    "connectorRef": "pipeline.jiraApprovalStep.validations.connectorRef",
    "issueKey": "pipeline.jiraApprovalStep.validations.issueKey"
  }
}
    </pre>
    <button
      class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color"
      type="button"
    >
      <span
        class="bp3-button-text"
      >
        Submit
      </span>
    </button>
  </div>
</div>
`;

exports[`Jira Approval tests Edit stage - readonly: edit stage view readonly 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <form
      class="FormikForm--main"
    >
      <div>
        <div
          class="formGroup lg"
        >
          <div
            class="InputWithIdentifier--txtNameContainer TextInput--main"
          >
            <div
              class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
            >
              <div
                class="Text--withDocsTooltip"
                data-tooltip-id="jiraApproval_identifier"
              >
                <p
                  class="StyledProps--font StyledProps--main"
                >
                  ID
                </p>
              </div>
              <p
                class="StyledProps--font StyledProps--main"
              >
                :
              </p>
              <span
                class="bp3-popover-wrapper"
              >
                <span
                  class="bp3-popover-target"
                >
                  <div
                    class="bp3-editable-text bp3-editable-text-placeholder InputWithIdentifier--idValue"
                    tabindex="0"
                  >
                    <span
                      class="bp3-editable-text-content"
                      style="height: 1px; line-height: 1px; min-width: 0;"
                    />
                  </div>
                </span>
              </span>
              <span
                class="bp3-icon StyledProps--main"
                data-icon="Edit"
                style="vertical-align: middle; cursor: pointer;"
              >
                <svg
                  height="12"
                  viewBox="0 0 16 16"
                  width="12"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M11.207.485a.5.5 0 01.354-.146 3.5 3.5 0 013.5 3.5.5.5 0 01-.146.353l-11 11a.5.5 0 01-.354.147h-3a.5.5 0 01-.5-.5v-3a.5.5 0 01.146-.354l11-11zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 00-2.294-2.292z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M11.89 2.646a.5.5 0 010 .708L8.353 6.889a.5.5 0 01-.708-.707l3.536-3.536a.5.5 0 01.707 0z"
                    fill="currentColor"
                    fill-rule="evenodd"
                    opacity="0.3"
                  />
                </svg>
              </span>
            </div>
            <div
              class="bp3-form-group bp3-disabled"
              data-id="name-0"
            >
              <label
                class="bp3-label"
                for="name"
              >
                <span
                  class="Tooltip--acenter"
                  data-tooltip-id="jiraApproval_name"
                >
                  name
                </span>
                 
                <span
                  class="bp3-text-muted"
                />
              </label>
              <div
                class="bp3-form-content"
              >
                <div
                  class="bp3-input-group bp3-disabled"
                >
                  <input
                    autocomplete="off"
                    class="bp3-input"
                    disabled=""
                    name="name"
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="formGroup sm"
        >
          <div
            class="bp3-form-group bp3-disabled"
            data-id="timeout-1"
          >
            <label
              class="bp3-label"
              for="timeout"
            >
              <span
                class="Tooltip--acenter"
                data-tooltip-id="jiraApproval_timeout"
              >
                pipelineSteps.timeoutLabel
              </span>
               
              <span
                class="bp3-text-muted"
              />
            </label>
            <div
              class="bp3-form-content"
            >
              <div
                class="Layout--horizontal StyledProps--main MultiTypeInput--main MultiTypeInput--disabled"
                style="flex-grow: 1;"
              >
                <div
                  class="bp3-input-group bp3-disabled bp3-fill"
                >
                  <input
                    class="bp3-input"
                    disabled=""
                    name="timeout"
                    placeholder="Enter w/d/h/m/s/ms"
                    type="text"
                    value="5s"
                  />
                </div>
                <button
                  class="MultiTypeInput--btn MultiTypeInput--FIXED"
                  disabled=""
                >
                  <span
                    class="bp3-icon StyledProps--main"
                    data-icon="fixed-input"
                  >
                    <svg
                      height="12"
                      viewBox="0 0 9 9"
                      width="12"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                        fill="currentColor"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="divider"
        />
        <div
          class="formGroup lg"
        >
          <div
            class="connectorLabel connectorLabel"
          >
            <div
              class="StyledProps--font StyledProps--main"
              style="margin-bottom: 5px;"
            >
              <span
                class="Tooltip--acenter bp3-label"
                data-tooltip-id="jiraApproval_spec.connectorRef"
              >
                pipeline.jiraApprovalStep.connectorRef
              </span>
            </div>
            <div
              class="bp3-form-group connector"
              data-id="undefined-2"
              style="margin-bottom: 0px;"
            >
              <div
                class="bp3-form-content"
              >
                <div
                  class="Layout--horizontal StyledProps--main MultiTypeInput--main MultiTypeInput--disabled"
                  style="width: 390px;"
                >
                  <button
                    class="bp3-button bp3-disabled bp3-minimal Button--button StyledProps--font StyledProps--main container Button--iconOnly Button--without-shadow Button--withRightIcon"
                    data-testid="cr-field-spec.connectorRef"
                    disabled=""
                    style="width: 390px;"
                    tabindex="-1"
                    type="button"
                  >
                    <span
                      class="bp3-button-text"
                    >
                      <div
                        class="Layout--horizontal Layout--layout-spacing-small StyledProps--main selectWrapper StyledProps--flex StyledProps--flex-distribution-space-between"
                      >
                        <span
                          class="bp3-popover-wrapper"
                        >
                          <span
                            class="bp3-popover-target Text--targetClass"
                          >
                            <p
                              class="StyledProps--font StyledProps--main label StyledProps--color StyledProps--color-grey800"
                              tabindex="0"
                            >
                              c1
                            </p>
                          </span>
                        </span>
                        <div
                          class="rightStatus"
                        >
                          <span
                            class="bp3-icon bp3-icon-full-circle StyledProps--main status redStatus"
                            data-testid="crf-status"
                            icon="full-circle"
                          >
                            <svg
                              data-icon="full-circle"
                              height="6"
                              viewBox="0 0 16 16"
                              width="6"
                            >
                              <desc>
                                full-circle
                              </desc>
                              <path
                                d="M8 0a8 8 0 100 16A8 8 0 108 0z"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                          <span
                            class="Tag--main"
                          >
                            <span
                              class="bp3-tag bp3-minimal"
                              id="tag"
                            >
                              <span
                                class="bp3-text-overflow-ellipsis bp3-fill"
                              >
                                project
                              </span>
                            </span>
                          </span>
                        </div>
                      </div>
                    </span>
                    <span
                      class="bp3-icon bp3-icon-chevron-down StyledProps--main"
                      icon="chevron-down"
                    >
                      <svg
                        data-icon="chevron-down"
                        height="14"
                        viewBox="0 0 16 16"
                        width="14"
                      >
                        <desc>
                          chevron-down
                        </desc>
                        <path
                          d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                  <button
                    class="MultiTypeInput--btn MultiTypeInput--FIXED"
                    disabled=""
                  >
                    <span
                      class="bp3-icon StyledProps--main"
                      data-icon="fixed-input"
                    >
                      <svg
                        height="12"
                        viewBox="0 0 9 9"
                        width="12"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                          fill="currentColor"
                        />
                      </svg>
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="formGroup lg"
        >
          <div
            class="bp3-form-group bp3-disabled"
            data-id="spec.projectKey-3"
          >
            <label
              class="bp3-label"
              for="spec.projectKey"
            >
              <span
                class="Tooltip--acenter"
                data-tooltip-id="jiraApprovalProject"
              >
                pipeline.jiraApprovalStep.project (optional)
              </span>
               
              <span
                class="bp3-text-muted"
              />
            </label>
            <div
              class="bp3-form-content"
            >
              <div
                class="Layout--horizontal StyledProps--main MultiTypeInput--main MultiTypeInput--disabled"
              >
                <div
                  class="bp3-popover-wrapper MultiTypeInput--select MultiTypeInput--fixedValueInput Select--main bp3-fill"
                >
                  <div
                    class="bp3-popover-target"
                  >
                    <div
                      class="bp3-input-group bp3-disabled"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        disabled=""
                        name="spec.projectKey"
                        placeholder="select"
                        style="padding-right: 0px;"
                        type="text"
                        value=""
                      />
                      <span
                        class="bp3-input-action"
                      >
                        <span
                          class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                          icon="chevron-down"
                        >
                          <svg
                            data-icon="chevron-down"
                            height="14"
                            viewBox="0 0 16 16"
                            width="14"
                          >
                            <desc>
                              chevron-down
                            </desc>
                            <path
                              d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
                <button
                  class="MultiTypeInput--btn MultiTypeInput--FIXED"
                  disabled=""
                >
                  <span
                    class="bp3-icon StyledProps--main"
                    data-icon="fixed-input"
                  >
                    <svg
                      height="12"
                      viewBox="0 0 9 9"
                      width="12"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                        fill="currentColor"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="formGroup lg"
        >
          <div
            class="bp3-form-group bp3-disabled"
            data-id="spec.issueType-4"
          >
            <label
              class="bp3-label"
              for="spec.issueType"
            >
              <span
                class="Tooltip--acenter"
                data-tooltip-id="jiraApprovalIssueType"
              >
                pipeline.jiraApprovalStep.issueType (optional)
              </span>
               
              <span
                class="bp3-text-muted"
              />
            </label>
            <div
              class="bp3-form-content"
            >
              <div
                class="Layout--horizontal StyledProps--main MultiTypeInput--main MultiTypeInput--disabled"
              >
                <div
                  class="bp3-popover-wrapper MultiTypeInput--select MultiTypeInput--fixedValueInput Select--main bp3-fill"
                >
                  <div
                    class="bp3-popover-target"
                  >
                    <div
                      class="bp3-input-group bp3-disabled"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        disabled=""
                        name="spec.issueType"
                        placeholder="select"
                        style="padding-right: 0px;"
                        type="text"
                        value=""
                      />
                      <span
                        class="bp3-input-action"
                      >
                        <span
                          class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                          icon="chevron-down"
                        >
                          <svg
                            data-icon="chevron-down"
                            height="14"
                            viewBox="0 0 16 16"
                            width="14"
                          >
                            <desc>
                              chevron-down
                            </desc>
                            <path
                              d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
                <button
                  class="MultiTypeInput--btn MultiTypeInput--FIXED"
                  disabled=""
                >
                  <span
                    class="bp3-icon StyledProps--main"
                    data-icon="fixed-input"
                  >
                    <svg
                      height="12"
                      viewBox="0 0 9 9"
                      width="12"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                        fill="currentColor"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="formGroup lg"
        >
          <div
            class="bp3-form-group bp3-disabled"
            data-id="spec.issueKey-5"
          >
            <label
              class="bp3-label"
              for="spec.issueKey"
            >
              <span
                class="Tooltip--acenter"
                data-tooltip-id="jiraApprovalIssueKey"
              >
                pipeline.jiraApprovalStep.issueKey
              </span>
               
              <span
                class="bp3-text-muted"
              />
            </label>
            <div
              class="bp3-form-content"
            >
              <div
                class="Layout--horizontal StyledProps--main MultiTypeInput--main MultiTypeInput--disabled"
              >
                <div
                  class="bp3-input-group bp3-disabled MultiTypeInput--input"
                >
                  <input
                    autocomplete="off"
                    class="bp3-input"
                    disabled=""
                    name="spec.issueKey"
                    placeholder="pipeline.jiraApprovalStep.issueKeyPlaceholder"
                    type="text"
                    value=""
                  />
                </div>
                <button
                  class="MultiTypeInput--btn MultiTypeInput--FIXED"
                  disabled=""
                >
                  <span
                    class="bp3-icon StyledProps--main"
                    data-icon="fixed-input"
                  >
                    <svg
                      height="12"
                      viewBox="0 0 9 9"
                      width="12"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                        fill="currentColor"
                      />
                    </svg>
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="box"
        >
          <div
            class="ng-tooltip-native"
          >
            <div
              class="stepSubSectionHeading"
              data-tooltip-id="jiraApprovalapprovalCriteria"
            >
              pipeline.approvalCriteria.approvalCriteria
            </div>
          </div>
          <div
            class="tabs"
          >
            <label
              class="bp3-control bp3-radio bp3-disabled StyledProps--font Radio--radio tab StyledProps--main"
            >
              <input
                checked=""
                disabled=""
                type="radio"
              />
              <span
                class="bp3-control-indicator"
              />
              conditions
            </label>
            <label
              class="bp3-control bp3-radio bp3-disabled StyledProps--font Radio--radio tab StyledProps--main"
            >
              <input
                disabled=""
                type="radio"
              />
              <span
                class="bp3-control-indicator"
              />
              common.jexlExpression
            </label>
          </div>
          <div
            class="conditionalContent"
          >
            <div
              class="Layout--horizontal Layout--layout-spacing-xxxlarge StyledProps--main alignConditions"
            >
              <span>
                pipeline.approvalCriteria.match
              </span>
              <label
                class="bp3-control bp3-radio bp3-disabled StyledProps--font Radio--radio StyledProps--main"
              >
                <input
                  disabled=""
                  type="radio"
                />
                <span
                  class="bp3-control-indicator"
                />
                pipeline.approvalCriteria.allConditions
              </label>
              <label
                class="bp3-control bp3-radio bp3-disabled StyledProps--font Radio--radio StyledProps--main"
              >
                <input
                  checked=""
                  disabled=""
                  type="radio"
                />
                <span
                  class="bp3-control-indicator"
                />
                pipeline.approvalCriteria.anyCondition
              </label>
            </div>
            <div
              class="formGroup"
            >
              <div
                class="criteriaRow"
              >
                <div
                  class="headers"
                >
                  <span>
                    pipeline.jiraApprovalStep.jiraField
                  </span>
                  <span>
                    common.operator
                  </span>
                  <span>
                    valueLabel
                  </span>
                </div>
                <button
                  class="bp3-button bp3-disabled bp3-minimal Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color Button--without-shadow Button--withLeftIcon"
                  data-testid="add-conditions"
                  disabled=""
                  tabindex="-1"
                  type="button"
                >
                  <span
                    class="bp3-icon bp3-icon-plus StyledProps--main"
                    icon="plus"
                  >
                    <svg
                      data-icon="plus"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <desc>
                        plus
                      </desc>
                      <path
                        d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                  <span
                    class="bp3-button-text"
                  >
                    add
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="noLookDivider"
        />
        <div
          class="Accordion--accordion accordion"
        >
          <div
            class="Accordion--panel"
            data-open="false"
            data-testid="optional-config-panel"
          >
            <div
              class="Accordion--summary"
              data-testid="optional-config-summary"
            >
              <div
                class="Accordion--label"
              >
                common.optionalConfig
              </div>
              <div
                class="Accordion--chevron"
              />
            </div>
            <div
              class="bp3-collapse Accordion--collapse"
            >
              <div
                aria-hidden="false"
                class="bp3-collapse-body"
                style="transform: translateY(-undefinedpx);"
              />
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`Jira Approval tests deploymentform mode - readonly: jira-approval-deploymentform readonly 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <div
      class="connectorLabel"
    >
      <div
        class="StyledProps--font StyledProps--main"
        style="margin-bottom: 5px;"
      >
        <span
          class="Tooltip--acenter bp3-label"
          data-tooltip-id="stepTestUtilForm_spec.connectorRef"
        >
          pipeline.jiraApprovalStep.connectorRef
        </span>
      </div>
      <div
        style="display: flex; align-items: center;"
      >
        <div
          class="bp3-form-group"
          style="margin-bottom: 0px;"
        >
          <div
            class="bp3-form-content"
          >
            <div
              class="Layout--horizontal StyledProps--main MultiTypeInput--main"
              style="width: 385px;"
            >
              <button
                class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main container Button--iconOnly Button--without-shadow Button--withRightIcon"
                data-testid="cr-field-spec.connectorRef"
                style="width: 385px;"
                type="button"
              >
                <span
                  class="bp3-button-text"
                >
                  <span
                    class="placeholder"
                  >
                    connectors.selectConnector
                  </span>
                </span>
                <span
                  class="bp3-icon bp3-icon-chevron-down StyledProps--main"
                  icon="chevron-down"
                >
                  <svg
                    data-icon="chevron-down"
                    height="14"
                    viewBox="0 0 16 16"
                    width="14"
                  >
                    <desc>
                      chevron-down
                    </desc>
                    <path
                      d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </button>
              <span
                class="bp3-popover-wrapper MultiTypeInput--wrapper"
              >
                <span
                  class="bp3-popover-target"
                >
                  <button
                    class="MultiTypeInput--btn MultiTypeInput--FIXED"
                  >
                    <span
                      class="bp3-icon StyledProps--main"
                      data-icon="fixed-input"
                    >
                      <svg
                        height="12"
                        viewBox="0 0 9 9"
                        width="12"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                          fill="currentColor"
                        />
                      </svg>
                    </span>
                  </button>
                </span>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="bp3-form-group deploymentViewMedium"
    >
      <label
        class="bp3-label"
        for="spec.issueKey"
      >
        <span
          class="Tooltip--acenter"
          data-tooltip-id="stepTestUtilForm_spec.issueKey"
        >
          pipeline.jiraApprovalStep.issueKey
        </span>
         
        <span
          class="bp3-text-muted"
        />
      </label>
      <div
        class="bp3-form-content"
      >
        <div
          class="Layout--horizontal StyledProps--main MultiTypeInput--main"
        >
          <div
            class="bp3-input-group MultiTypeInput--input"
          >
            <input
              autocomplete="off"
              class="bp3-input"
              name="spec.issueKey"
              type="text"
              value=""
            />
          </div>
          <span
            class="bp3-popover-wrapper MultiTypeInput--wrapper"
          >
            <span
              class="bp3-popover-target"
            >
              <button
                class="MultiTypeInput--btn MultiTypeInput--FIXED"
              >
                <span
                  class="bp3-icon StyledProps--main"
                  data-icon="fixed-input"
                >
                  <svg
                    height="12"
                    viewBox="0 0 9 9"
                    width="12"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                      fill="currentColor"
                    />
                  </svg>
                </span>
              </button>
            </span>
          </span>
        </div>
      </div>
    </div>
    <p
      class="StyledProps--font StyledProps--main"
    >
      Errors
    </p>
    <pre>
      {}
    </pre>
    <button
      class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color"
      type="button"
    >
      <span
        class="bp3-button-text"
      >
        Submit
      </span>
    </button>
  </div>
</div>
`;
